KUBE/react-java-mysql/kube/backend-deploy.yml

apiVersion: apps/v1
kind: Deployment

metadata:
  name: app-backend
  namespace: app3

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: docker.io/achalpadol/react-java-backend:v1

          ports:
            - containerPort: 8080

          volumeMounts:
            - name: db-password
              mountPath: /run/secrets/db-password
              subPath: db-password
              readOnly: true

      volumes:
        - name: db-password
          secret:
            secretName: backend-secret
            items:
              - key: MYSQL_ROOT_PASSWORD
                path: db-password
